--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Nov 03 2020 04:33:53 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Dec 07 2020 08:57:59 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5ecb7ed6bb713f67e148319d" data-wf-site="5ecb7ed6bb713f2f4b48319b">
 <head>
   <meta charset="utf-8">
@@ -84,7 +84,7 @@
           <div class="slide w-slide">
             <div class="tutorial__slide-content">
               <div class="tutorial__slide-info">
-                <div><span class="slide-info__title">Introduction:</span> <span class="slide-info__introduction">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi porta nibh ligula, id venenatis lectus consequat eu. Sed a augue sit amet eros convallis vulputate.</span></div>
+                <div><span class="slide-info__title">Introduction:</span> <span class="slide-info__introduction">This website was developed to enable you to easily find spatial information related to geographic areas. By clicking on the map or using the search bar, you can navigate to an area of interest and find relevant information about it.</span></div>
               </div>
               <div class="tutorial__slide-image _1">
                 <div class="tutorial__slide_gradient bottom"></div>
@@ -485,11 +485,11 @@
           </div>
         </div>
       </div>
-        <div title="Download map" class="map-download">
-            <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
-                <path d="M0 0h24v24H0z" fill="none"></path>
-                <path fill="currentColor" d="M19,9h-4V3H9v6H5l7,7L19,9z M5,18v2h14v-2H5z"></path>
-            </svg></div>
+      <div title="Download map" class="map-download">
+        <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
+            <path d="M0 0h24v24H0z" fill="none"></path>
+            <path fill="currentColor" d="M19,9h-4V3H9v6H5l7,7L19,9z M5,18v2h14v-2H5z"></path>
+          </svg></div>
       </div>
       <div id="main-map" class="map-area"></div>
     </div>
@@ -610,6 +610,28 @@
               </div>
             </div>
             <div style="height:0PX" class="location__facilities_content">
+              <div class="location__facilities_content-wrapper">
+                <div class="location__facilities_sources">
+                  <div class="label">
+                    <div>Sources:</div>
+                  </div>
+                  <div class="location__sources_loading">
+                    <div class="loading">
+                      <div class="loading__icon"><img src="images/loading.gif" alt=""></div>
+                      <div class="loading__text">
+                        <div>Loading... </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="location__sources_no-data hidden">
+                    <div class="no-data">
+                      <div class="no-data__text">
+                        <div>No source data available</div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </section>
@@ -2890,7 +2912,7 @@
               </div>
             </div>
             <div class="facility-tooltip__close">
-              <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
+              <div class="svg-icon svg-icon--no-size w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
                   <path d="M0 0h24v24H0z" fill="none"></path>
                   <path fill="currentColor" d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"></path>
                 </svg></div>
@@ -2975,8 +2997,21 @@
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5ecb7ed6bb713f2f4b48319b" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
-</script>
-  <!--  Used for the autocomplete search box  -->
+  <style>
+  #dev-tools {
+    z-index:200;
+  }
+  #map-download-title {
+   position: fixed;
+   top: 80px;
+   z-index: 998;
+   width: 100%;
+   text-align: center;
+   font-size: 30px;
+   font-weight: bold;
+   color: white;
+ }
+</style> <!--  Used for the autocomplete search box  -->
   <link href="https://code.jquery.com/ui/1.12.0/themes/smoothness/jquery-ui.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css">
   <link rel="stylesheet" href="https://openup.org.za/wazimap-ng-ui/wazimap-ng.css">
