--- a/src/index.html
+++ b/src/index.html
@@ -818,6 +818,15 @@
           </div>
           <div>The Data Mapper cannot be used with this location as it doesn&#x27;t contain any sub-areas which can be used for mapping</div>
         </div>
+        <div class="data-mapper-content__no-data no-choropleth-data hidden">
+          <div class="no-data__icon">
+            <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
+                <path d="M0 0h24v24H0z" fill="none"></path>
+                <path fill="currentColor" d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"></path>
+              </svg></div>
+          </div>
+          <div>The Data Mapper cannot be used with this location as it doesn&#x27;t have enough data to display</div>
+        </div>
         <div class="data-mapper-content__list"></div>
       </div>
       <div class="data-mapper-toggles">
