--- a/src/index.html
+++ b/src/index.html
@@ -224,6 +224,14 @@
     </div>
   </div>
   <div class="main">
+    <div class="tab-notice hidden">
+      <div class="tab-notice__inner">
+        <a href="#" class="tab-notice__content w-inline-block">
+          <div class="tab-notice__text">Loading...</div>
+        </a>
+        <div class="plate bg-primary"></div>
+      </div>
+    </div>
     <div class="nav">
       <div data-w-id="66ee4f1f-99f3-8310-c69c-b5d00bdac74c" style="opacity:1;display:none" class="nav__search-deselect"></div>
       <div class="nav__shadow"></div>
