--- a/src/index.html
+++ b/src/index.html
@@ -690,12 +690,12 @@
     <div class="facility-info">
       <div class="facility-info__header">
         <h3 class="facility-info__title">Loading...</h3>
-        <div title="Download information (.pdf)" class="facility-info__download">
-          <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
+        <a href="#" onclick="window.print()" title="Download information (.pdf)" class="facility-info__print">
+          <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" height="24" viewbox="0 0 24 24" width="24">
               <path d="M0 0h24v24H0z" fill="none"></path>
-              <path fill="currentColor" d="M19,9h-4V3H9v6H5l7,7L19,9z M5,18v2h14v-2H5z"></path>
+              <path fill="CurrentColor" d="M19 8H5c-1.66 0-3 1.34-3 3v6h4v4h12v-4h4v-6c0-1.66-1.34-3-3-3zm-3 11H8v-5h8v5zm3-7c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm-1-9H6v4h12V3z"></path>
             </svg></div>
-        </div>
+        </a>
         <div title="Close" class="facility-info__close">
           <div class="svg-icon svg-icon--no-size w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
               <path d="M0 0h24v24H0z" fill="none"></path>
