translating on the fly

--- a/src/index.html
+++ b/src/index.html
@@ -735,11 +735,11 @@
               </svg></div>
           </div>
           <div class="point-data__header_title">
-            <div>Point Mapper </div>
+            <div class="i18n" data-i18n="Point Mapper">Point Mapper </div>
           </div>
         </div>
         <div class="point-mapper-content__description">
-          <div>Select the category, or specific type of point data you would like to overlay onto the map.<strong><br></strong></div>
+          <div class="i18n" data-i18n="lorem ipsum">Select the category, or specific type of point data you would like to overlay onto the map.<strong><br></strong></div>
         </div>
         <div class="point-mapper-content__loading">
           <div class="loading">
