--- a/src/index.html
+++ b/src/index.html
@@ -690,12 +690,12 @@
     <div class="facility-info">
       <div class="facility-info__header">
         <h3 class="facility-info__title">Loading...</h3>
-        <a href="#" onclick="window.print()" title="Download information (.pdf)" class="facility-info__print">
-          <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" height="24" viewbox="0 0 24 24" width="24">
+        <div title="Download information (.pdf)" class="facility-info__download">
+          <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
               <path d="M0 0h24v24H0z" fill="none"></path>
-              <path fill="CurrentColor" d="M19 8H5c-1.66 0-3 1.34-3 3v6h4v4h12v-4h4v-6c0-1.66-1.34-3-3-3zm-3 11H8v-5h8v5zm3-7c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm-1-9H6v4h12V3z"></path>
+              <path fill="currentColor" d="M19,9h-4V3H9v6H5l7,7L19,9z M5,18v2h14v-2H5z"></path>
             </svg></div>
-        </a>
+        </div>
         <div title="Close" class="facility-info__close">
           <div class="svg-icon svg-icon--no-size w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
               <path d="M0 0h24v24H0z" fill="none"></path>
@@ -703,18 +703,6 @@
             </svg></div>
         </div>
       </div>
-      <a href="#" class="facility-info__view-google-map hidden w-inline-block">
-        <div class="facility-info__google-map-icon">
-          <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewbox="0 0 150 150">
-              <path fill="#1a73e8" d="M89.77,10.4c-4.4-1.39-9.08-2.15-13.94-2.15c-14.18,0-26.87,6.41-35.33,16.48l21.8,18.34L89.77,10.4z"></path>
-              <path fill="#ea4335" d="M40.49,24.73c-6.74,8.02-10.81,18.37-10.81,29.66c0,8.68,1.73,15.71,4.57,22.01l28.04-33.33L40.49,24.73z"></path>
-              <path fill="#4285f4" d="M75.83,36.75c9.75,0,17.65,7.9,17.65,17.65c0,4.34-1.57,8.32-4.17,11.39c0,0,13.94-16.58,27.47-32.66   c-5.59-10.75-15.28-19.02-27-22.73L62.29,43.07C65.53,39.2,70.39,36.75,75.83,36.75"></path>
-              <path fill="#fbbc04" d="M75.83,72.04c-9.75,0-17.65-7.9-17.65-17.65c0-4.31,1.55-8.26,4.11-11.33L34.25,76.4   c4.79,10.63,12.76,19.16,20.97,29.91L89.3,65.79C86.07,69.61,81.23,72.04,75.83,72.04"></path>
-              <path fill="#34a853" d="M88.63,117.37c15.39-24.07,33.34-35,33.34-62.98c0-7.67-1.88-14.9-5.19-21.26l-61.55,73.18   c2.61,3.42,5.24,7.06,7.81,11.07c9.36,14.46,6.76,23.13,12.8,23.13C81.86,140.51,79.27,131.83,88.63,117.37"></path>
-            </svg></div>
-        </div>
-        <div class="facility-info__google-map-text">View location in Google Maps</div>
-      </a>
       <div class="facility-info__content">
         <div class="facility-info__items">
           <div class="facility-info__item last">
