--- a/src/index.html
+++ b/src/index.html
@@ -749,6 +749,12 @@
             </div>
           </div>
         </div>
+        <div class="point-mapper-content__error">
+          <span class="material-icons">
+            error
+          </span>
+          <span class="point-mapper-error__text">Oops, something went wrong. Please try again or reload the page. <a href="#">Contact us</a> if the problem persists.</span>
+        </div>
         <div class="point-mapper-content__no-data hidden">
           <div class="no-data">
             <div class="no-data__icon">
