added email contact to Contact Us link, added extra padding

--- a/src/index.html
+++ b/src/index.html
@@ -753,7 +753,10 @@
           <span class="material-icons">
             error
           </span>
-          <span class="point-mapper-error__text">Oops, something went wrong. Please try again or reload the page. <a href="#">Contact us</a> if the problem persists.</span>
+          <span class="point-mapper-error__text">
+            Oops, something went wrong. Please try again or reload the page. 
+            <a href="mailto:info@mma.org.za">Contact us</a> if the problem persists.
+          </span>
         </div>
         <div class="point-mapper-content__no-data hidden">
           <div class="no-data">
