added download all facilities button

--- a/src/index.html
+++ b/src/index.html
@@ -619,15 +619,24 @@
               </div>
             </div>
             <div class="location__facilities_header hidden">
-              <div class="location__facilities_icon">
-                <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
-                    <path d="M0 0h24v24H0z" fill="none"></path>
-                    <path fill="currentColor" d="M8.92,11.22a2.56,2.56,0,1,1,2.55-2.55,2.55,2.55,0,0,1-2.55,2.55m0-9.72A7.16,7.16,0,0,0,1.76,8.67C1.76,14,8.92,22,8.92,22S16.08,14,16.08,8.67A7.17,7.17,0,0,0,8.92,1.5Z"></path>
-                    <path fill="currentColor" d="M18.77,16.26V12.54h-2v3.72H14.39c-.42.69-.85,1.36-1.28,2h3.67V22h2V18.24h3.72v-2Z"></path>
-                  </svg></div>
+              <div class="location__facilities_header-wrapper">
+                <div class="location__facilities_icon">
+                  <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
+                      <path d="M0 0h24v24H0z" fill="none"></path>
+                      <path fill="currentColor" d="M8.92,11.22a2.56,2.56,0,1,1,2.55-2.55,2.55,2.55,0,0,1-2.55,2.55m0-9.72A7.16,7.16,0,0,0,1.76,8.67C1.76,14,8.92,22,8.92,22S16.08,14,16.08,8.67A7.17,7.17,0,0,0,8.92,1.5Z"></path>
+                      <path fill="currentColor" d="M18.77,16.26V12.54h-2v3.72H14.39c-.42.69-.85,1.36-1.28,2h3.67V22h2V18.24h3.72v-2Z"></path>
+                    </svg></div>
+                </div>
+                <div class="location__facilities_title">
+                  <div>This <span class="location__facilities_geo-type">area</span> has <span class="location__facilities_facilities-value"><strong>0000</strong></span><strong> locations</strong> in <span class="location__facilities_categories-value"><strong>0000</strong></span><strong> categories</strong>.</div>
+                </div>
               </div>
-              <div class="location__facilities_title">
-                <div>This <span class="location__facilities_geo-type">area</span> has <span class="location__facilities_facilities-value"><strong>0000</strong></span><strong> locations</strong> in <span class="location__facilities_categories-value"><strong>0000</strong></span><strong> categories</strong>.</div>
+              <div class="location__facilities_download-all location__facilities_download-all--header">
+                <div>Download all facilities</div>
+                <div class="svg-icon small w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24">
+                    <path d="M0 0h24v24H0z" fill="none"></path>
+                    <path fill="currentColor" d="M19,9h-4V3H9v6H5l7,7L19,9z M5,18v2h14v-2H5z"></path>
+                  </svg></div>
               </div>
             </div>
             <div class="location__facilities_trigger hidden">
