adding translate key dynamically

--- a/src/index.html
+++ b/src/index.html
@@ -739,7 +739,7 @@
           </div>
         </div>
         <div class="point-mapper-content__description">
-          <div class="i18n" data-i18n="lorem ipsum">Select the category, or specific type of point data you would like to overlay onto the map.<strong><br></strong></div>
+          <div>Select the category, or specific type of point data you would like to overlay onto the map.<strong><br></strong></div>
         </div>
         <div class="point-mapper-content__loading">
           <div class="loading">
