--- a/src/index.html
+++ b/src/index.html
@@ -2309,7 +2309,7 @@
                     <div class="location-facility__category">
                       <div class="location-facility__header">
                         <div class="location-facility__icon">
-                          <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="100%" height="" viewbox="0 0 24 24">
+                          <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="100%" viewbox="0 0 24 24">
                               <path d="M0 0h24v24H0z" fill="none"></path>
                               <path fill="currentColor" d="M5 13.18v4L12 21l7-3.82v-4L12 17l-7-3.82zM12 3L1 9l11 6 9-4.91V17h2V9L12 3z"></path>
                             </svg></div>
@@ -2428,7 +2428,7 @@
             <div class="category-header__content">
               <div class="category-header__title">
                 <div class="category-header__icon">
-                  <div class="svg-icon large w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="100%" height="" viewbox="0 0 24 24">
+                  <div class="svg-icon large w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="100%" viewbox="0 0 24 24">
                       <path d="M0 0h24v24H0z" fill="none"></path>
                       <path fill="currentColor" d="M5 13.18v4L12 21l7-3.82v-4L12 17l-7-3.82zM12 3L1 9l11 6 9-4.91V17h2V9L12 3z"></path>
                     </svg></div>
@@ -2919,7 +2919,7 @@
           <div class="facility-tooltip">
             <div class="facility-tooltip__header">
               <div class="facility-tooltip__header_icon">
-                <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="100%" height="" viewbox="0 0 24 24">
+                <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="100%" viewbox="0 0 24 24">
                     <path d="M0 0h24v24H0z" fill="none"></path>
                     <path fill="currentColor" d="M5 13.18v4L12 21l7-3.82v-4L12 17l-7-3.82zM12 3L1 9l11 6 9-4.91V17h2V9L12 3z"></path>
                   </svg></div>
@@ -3052,7 +3052,6 @@
 </style> <!--  Used for the autocomplete search box  -->
   <link href="https://code.jquery.com/ui/1.12.0/themes/smoothness/jquery-ui.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css">
-  <link rel="stylesheet" href="https://openup.org.za/wazimap-ng-ui/wazimap-ng.css">
   <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"></script>
   <!--  Material design icons  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -3091,7 +3090,7 @@ setTimeout(function(){
 /*------------------------------------- Hide webflow items on deploy */
 .disabled {
   pointer-events: none;
-}  
+}
 /*------------------------------------- Hide scrollbar for Chrome, Safari and Opera */
 .no-scroll::-webkit-scrollbar {
   display: none;
@@ -3116,14 +3115,14 @@ setTimeout(function(){
   border-color:rgb(51, 51, 51);
   border-radius:2px;
 }
-/*-------- Custom slider checkbox */  
+/*-------- Custom slider checkbox */
 .switch {
   position: relative;
   display: inline-block;
   width: 32px;
   height: 20px;
 }
-.switch input { 
+.switch input {
   opacity: 0;
   width: 0;
   height: 0;
@@ -3165,7 +3164,7 @@ input:checked + .slider:before {
 .slider.round:before {
   border-radius: 50%;
 }
-/*-------- Fixing Chart Lines */  
+/*-------- Fixing Chart Lines */
 .bar-tooltip {
   z-index: 100;
 }
