--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  --><!--  Last Published: Fri Mar 17 2023 07:30:57 GMT+0000 (Coordinated Universal Time)  --><html data-wf-page="63918cd6b8bb21ac2dd9ea49" data-wf-site="5fd05e808ba6609d12285571"><head>
+<!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  --><!--  Last Published: Mon Jun 26 2023 14:15:13 GMT+0000 (Coordinated Universal Time)  --><html data-wf-page="63918cd6b8bb21ac2dd9ea49" data-wf-site="5fd05e808ba6609d12285571"><head>
   <meta charset="utf-8">
   <title>Wazimap NG</title>
   <meta content="Discover the human stories in population data. Wazimap is a tool that helps map and visualise data used for population-based decision making." name="description">
@@ -20,7 +20,6 @@
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
   <script type="text/javascript">WebFont.load({  google: {    families: ["Inconsolata:400,700","Roboto:300,regular,italic,500,500italic,700,900"]  }});</script>
-  <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
@@ -378,7 +377,7 @@ line, .grid {
       </div>
       <div id="w-node-_5c3e6bec-baae-1fe9-3f2a-222d0aaebade-2dd9ea49" class="login__form">
         <div class="form-block w-form">
-          <form id="wf-form-Login-Form" name="wf-form-Login-Form" data-name="Login Form" method="get"><label for="Email">Username</label><input type="email" class="text-field w-input" maxlength="256" name="Email" data-name="Email" placeholder="" id="Email" required=""><label for="Password">Password</label><input type="password" class="text-field w-input" maxlength="256" name="Password" data-name="Password" placeholder="" id="Password" required="">
+          <form id="wf-form-Login-Form" name="wf-form-Login-Form" data-name="Login Form" method="get" data-wf-page-id="63918cd6b8bb21ac2dd9ea49" data-wf-element-id="2c610f29-c711-7689-3c43-fceb1157e414"><label for="Email">Username</label><input type="email" class="text-field w-input" maxlength="256" name="Email" data-name="Email" placeholder="" id="Email" required=""><label for="Password">Password</label><input type="password" class="text-field w-input" maxlength="256" name="Password" data-name="Password" placeholder="" id="Password" required="">
             <div class="login-form__actions"><label id="w-node-_80c1d4e4-3db7-9834-435b-fefcf113a3cc-2dd9ea49" class="w-checkbox login-form__checkbox">
                 <div class="w-checkbox-input w-checkbox-input--inputType-custom custom-checkbox"></div><input type="checkbox" id="checkbox-2" name="checkbox-2" data-name="Checkbox 2" style="opacity:0;position:absolute;z-index:-1"><span class="checkbox-label w-form-label" for="checkbox-2">Remember me</span>
               </label><input type="submit" value="Login" data-wait="Please wait..." id="w-node-_2c610f29-c711-7689-3c43-fceb1157e41b-2dd9ea49" class="button w-button">
@@ -573,7 +572,7 @@ line, .grid {
         <div id="w-node-_2331a044-806f-907c-13ce-926b3e9c8568-2dd9ea49" class="nav__content_search">
           <div class="nav__search_input">
             <div data-w-id="2331a044-806f-907c-13ce-926b3e9c8576" class="search__input w-form">
-              <form id="email-form" name="email-form" data-name="Email Form" method="post" class="form"><input type="text" class="location__search_input w-input i18n-placeholder" autocomplete="off" maxlength="256" name="Location" data-name="Location" placeholder="Search for a location..." id="Location" data-i18n="Search for a location...">
+              <form id="email-form" name="email-form" data-name="Email Form" method="post" class="form" data-wf-page-id="63918cd6b8bb21ac2dd9ea49" data-wf-element-id="2331a044-806f-907c-13ce-926b3e9c8577"><input type="text" class="location__search_input w-input i18n-placeholder" autocomplete="off" maxlength="256" name="Location" data-name="Location" placeholder="Search for a location..." id="Location" data-i18n="Search for a location...">
                 <div class="location__search_loading"><img src="images/loading.gif" alt=""></div>
               </form>
               <div class="w-form-done">
@@ -615,37 +614,6 @@ line, .grid {
                 </div>
               </div>
             </div>
-          </div>
-        </div>
-        <div id="w-node-_2331a044-806f-907c-13ce-926b3e9c85a0-2dd9ea49" class="nav__content_menu">
-          <div class="nav__link-wrap">
-            <a data-w-id="2331a044-806f-907c-13ce-926b3e9c8565" href="#" class="nav__link tutorial__open bg-primary w-inline-block">
-              <div class="nav__link_icon">
-                <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
-                    <path d="M0 0h24v24H0z" fill="none"></path>
-                    <path fill="currentColor" d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75l-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25z"></path>
-                  </svg></div>
-              </div>
-              <div class="nav__link_text">
-                <div>Tutorial</div>
-              </div>
-            </a>
-            <a data-w-id="9ed47308-e332-9825-644e-4ad6bb204fab" href="#" class="nav__link hidden w-inline-block">
-              <div class="nav__link_icon">
-                <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
-                    <path d="M0 0h24v24H0z" fill="none"></path>
-                    <path fill="currentColor" d="M10.09 15.59L11.5 17l5-5-5-5-1.41 1.41L12.67 11H3v2h9.67l-2.58 2.59zM19 3H5c-1.11 0-2 .9-2 2v4h2V5h14v14H5v-4H3v4c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"></path>
-                  </svg></div>
-              </div>
-              <div class="nav__link_text">
-                <div>Login</div>
-              </div>
-            </a>
-          </div>
-          <div class="nav__menu-trigger hidden">
-            <div class="svg-icon w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                <path fill="currentColor" d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"></path>
-              </svg></div>
           </div>
         </div>
       </div>
@@ -3874,9 +3842,7 @@ line, .grid {
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5fd05e808ba6609d12285571" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-  <script src="js/webflow.js" type="text/javascript"></script>
-  <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
-  <!--  Used for the autocomplete search box  -->
+  <script src="js/webflow.js" type="text/javascript"></script><!--  Used for the autocomplete search box  -->
   <link href="https://code.jquery.com/ui/1.12.0/themes/smoothness/jquery-ui.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css">
   <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"></script>
